# imlibpurpleservice

./: CMakeLists.txt  COPYRIGHT
files/etc/palm/activities/com.palm.imlibpurple/: com.palm.imcommand.libpurple
files/etc/palm/db/kinds/: com.palm.config.libpurple  com.palm.imcommand  com.palm.imgroupchat  com.palm.iminvitation  com.palm.imloginstate  com.palm.immessage
files/etc/palm/db/permissions/: com.palm.config.libpurple  com.palm.contact.libpurple  com.palm.imcommand  com.palm.imcommand.libpurple  com.palm.imgroupchat  com.palm.imloginstate  com.palm.imloginstate.libpurple  com.palm.immessage  com.palm.immessage.libpurple
files/etc/palm/tempdb/kinds/: com.palm.imbuddystatus
files/etc/palm/tempdb/permissions/: com.palm.imbuddystatus  com.palm.imbuddystatus.libpurple
files/sysbus/: com.palm.imlibpurple.api.json.in  com.palm.imlibpurple.groups.json  com.palm.imlibpurple.json.prv  com.palm.imlibpurple.perm.json.in  com.palm.imlibpurple.role.json.in  com.palm.imlibpurple.service.in
files/usr/share/dbus-1/system-services/: com.palm.imlibpurple.service
inc/: BuddyListConsolidator.h  BuddyStatusHandler.h  ConnectionStateHandler.h  DisplayController.h  IMLoginState.h  IMServiceHandler.h  IncomingIMHandler.h  LibpurpleAdapter.h  OnEnabledHandler.h  OutgoingIMHandler.h  PalmImCommon.h  SendOneCommandHandler.h  SendOneMessageHandler.h  Util.h  sanitize.h
service/: com.palm.imlibpurple.json.prv
src/: BuddyListConsolidator.cpp  IMLoginState.cpp  IMMessage.cpp  IMServiceHandler.cpp  LibpurpleAdapter.cpp  OnEnabledHandler.cpp  Util.cpp  sanitize.cpp
